--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "history": "^5.3.0",
     "rc-progress": "^3.2.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -13,7 +14,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-animate": "^3.5.2",
-    
     "react-tsparticles": "^2.0.6",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.50.1",
